--- a/covid-dashboard/package.json
+++ b/covid-dashboard/package.json
@@ -9,6 +9,7 @@
     "eslint": "^5.16.0",
     "node-sass": "4.14.1",
     "normalize.scss": "^0.1.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
