--- a/covid-dashboard/.eslintrc.json
+++ b/covid-dashboard/.eslintrc.json
@@ -21,6 +21,9 @@
         "react/jsx-filename-extension": [1, {
             "extensions": [".js", ".jsx"]}
         ],
-        "no-underscore-dangle": "off"
+        "no-underscore-dangle": "off",
+        "jsx-a11y/click-events-have-key-events": "off",
+        "jsx-a11y/no-static-element-interactions": "off",
+        "jsx-a11y/no-noninteractive-element-interactions": "off"
     }
 }
