--- a/covid-dashboard/package.json
+++ b/covid-dashboard/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "mapbox-gl": "^2.0.0",
     "node-sass": "4.14.1",
     "normalize.scss": "^0.1.0",
     "prop-types": "^15.7.2",
@@ -13,7 +14,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4",
-    "mapbox-gl": "^2.0.0"
+    "react-mapbox-gl": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,6 +46,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "mapbox-gl": "^2.0.0"
+    "mapbox-gl": "^2.0.0",
+    "react-mapbox-gl": "^5.1.1"
   }
 }
