--- a/covid-dashboard/package.json
+++ b/covid-dashboard/package.json
@@ -2,7 +2,7 @@
   "name": "covid-dashboard",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rolling-scopes-school.github.io/velidoss-JS2020Q3/covid-dashboard/",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
