--- a/covid-dashboard/.eslintrc.json
+++ b/covid-dashboard/.eslintrc.json
@@ -24,6 +24,7 @@
         "no-underscore-dangle": "off",
         "jsx-a11y/click-events-have-key-events": "off",
         "jsx-a11y/no-static-element-interactions": "off",
-        "jsx-a11y/no-noninteractive-element-interactions": "off"
+        "jsx-a11y/no-noninteractive-element-interactions": "off",
+        "linebreak-style": ["error", "windows"]
     }
 }
