--- a/covid-dashboard/package.json
+++ b/covid-dashboard/package.json
@@ -7,11 +7,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "chart.js": "^2.9.4",
     "mapbox-gl": "^1.13.0",
     "node-sass": "4.14.1",
     "normalize.scss": "^0.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-mapbox-gl": "^5.1.1",
     "react-scripts": "4.0.1",
