--- a/covid-dashboard/package.json
+++ b/covid-dashboard/package.json
@@ -15,7 +15,7 @@
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
-    "react-mapbox-gl": "^5.1.1",
+    "react-map-gl": "^6.0.2",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
@@ -50,7 +50,6 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "mapbox-gl": "^1.13.0",
-    "react-mapbox-gl": "^5.1.1",
     "worker-loader": "^3.0.7"
   }
 }
