--- a/covid-dashboard/package.json
+++ b/covid-dashboard/package.json
@@ -15,6 +15,7 @@
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-map-gl": "^5.2.11",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
